2005-05-30  H.J. Lu  <hongjiu.lu@intel.com>

PR middle-end/20303
	* c-pragma.c: Include "vec.h".
	(handle_pragma_visibility): Use VEC.

	* doc/invoke.texi: Remove the nested visibility push limit.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@100371 138bc75d-0d04-0410-961f-82ee72b054a4